# Hog

./: .gitignore  LICENSE  README  README.md  TODO.txt  report.docx  tags
c/: CMakeLists.txt  README  README.md  REAME.md  bin_selection.vhd.old  bu_REAME  lsi_2017.c  main.c  mytypes.h
c/inc/: hog_window.h
c/install/: auto.sh  trainSVM_matrix.txt
c/install/libs/: mask_matrix.txt
c/png/: Cal_HOG_block.c  Cal_HOG_block.c_bu  Cal_HOG_block.c_new  Cal_HOG_block.h  SVMclassification.c  SVMclassification.h  helper.c  helper.h  human_detection.c  human_detection.h  rwpng.c  rwpng.h
c/src/: hog_window.c  hog_window.c.old  pack.c
cpp/: .syntastic_c_config  .syntastic_cpp_config  Makefile  README.md  TODO.md  hog  ouf.txt  people.png_features.txt
cpp/inc/: HOGProcessor.h  approximatedDivision.h  appx_div.h  block_norm_comp.h  config.h  pack.h  pix_bin_comp.h  rwpng.h  window_hog_comp.h  (+1 more)
documents/: Presentation1.pptx  RAM_rgb2gray.pptx  human_detection_paper.docx  paper_outline.md
matlab/: calcProb.m  getHOGDescriptorTestGaussianWindow.m  humanDetector_16_09_13.m  oriented_histogram_calculation.m  test_set_hog_calculation.txt
rtl/: approximatedDivision.vhd  appx_div.vhd  block_norm_comp.vhd  checkLeftMostBit.vhd  config_pix_bin_comp_pkg.vhd  config_pkg.vhd  pix_bin_comp.vhd  sqrt32.vhd  window_norm_comp.vhd
svn/: transcript
tb/: README.md  compile.do  compile_appx_div.do  compile_block.do  compile_window.do  tb_approximatedDivision.vhd  tb_pix_bin_comp.vhd  transcript  vsim.wlf
vhdl/: .test.c.swo  .test.c.swp  README.md  grayscale.vhd  transcript  vsim.wlf
(+311 files in other folders)
